--- a/404.html
+++ b/404.html
@@ -10,8 +10,18 @@
       html, body{
         background-color:#FDFDFD;
         margin:0;
-        overflow-x: hidden;
+        overflow-x: hidden !important;
       }
+      body {
+        height: 54vw;
+        min-height: 1362px;
+        background-position: center top;
+        background-size: cover;
+        background-attachment: scroll;
+        background-repeat: no-repeat;
+        font-size: 100%;
+        margin: 0;
+    }
       #TopBanner{
           width: 108%;
           margin:0;
