--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
                         </ul>
                     <p>Regular Meetings</p>
                         <ul>
-                          <li>Tutorial updates held up to twice a week</li>
+                          <li>Updates held during lunch on Mondays</li>
                         </ul>
                 </section>
                 <div class = "TransparencyGradients"></div>
