--- a/about-us/index.html
+++ b/about-us/index.html
@@ -463,7 +463,7 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fun Fact: Aiden writes like an old man.</p>
             </div>
             <div class="gallery">
-                <a target="_blank" href="/SHSEnvironmentalAction/images/CustomLeaf.png">
+                <a target="_blank" href="/SHSEnvironmentalAction/images/233AE5F8-F8EF-40D5-B7CD-CB147DB1128A.jpeg">
                     <img src="/SHSEnvironmentalAction/images/CustomLeaf.png"> 
                 </a>
                 <p class="grade">Grade: 11</p>
