--- a/about-us/index.html
+++ b/about-us/index.html
@@ -307,8 +307,8 @@
                 font-family: Montserrat;
             }
             .gallery img {
-                width: 29.5%;
-                height: auto;
+                width: 22vw;
+                height: 22vw;
                 border: 5px solid #000;
                 opacity:1;
             }
@@ -464,7 +464,7 @@
             </div>
             <div class="gallery">
                 <a target="_blank" href="/SHSEnvironmentalAction/images/233AE5F8-F8EF-40D5-B7CD-CB147DB1128A.jpeg">
-                    <img src="/SHSEnvironmentalAction/images/CustomLeaf.png"> 
+                    <img src="/SHSEnvironmentalAction/images/233AE5F8-F8EF-40D5-B7CD-CB147DB1128A.jpeg"> 
                 </a>
                 <p class="grade">Grade: 11</p>
                 <p class="name">Webmaster: Richard Li</p>
