--- a/about-us/index.html
+++ b/about-us/index.html
@@ -187,6 +187,14 @@
                 top:11.1vh;
                 transform: rotate(60deg);
             }
+            #Header{
+                font-family: Montserrat;
+                font-size: 2rem;
+                font-weight: bold;
+                text-align: center;
+                position: relative;
+                top:15vw;
+            }
             #copyright {
                 position: absolute;
                 text-align:center;
@@ -429,7 +437,7 @@
         <img class = "CustomLeaf LeafOne"/>
         <img class = "CustomLeaf LeafTwo"/>
         <img class = "CustomLeaf LeafThree"/>
-        
+        <h1 id = "Header">MEET THE TEAM</h1>
         <div class = "container">
             <div class="gallery">
                 <a target="_blank" href="/SHSEnvironmentalAction/images/CustomLeaf.png">
