--- a/about-us/index.html
+++ b/about-us/index.html
@@ -440,8 +440,8 @@
         <h1 id = "Header">MEET THE TEAM</h1>
         <div class = "container">
             <div class="gallery">
-                <a target="_blank" href="/SHSEnvironmentalAction/images/CustomLeaf.png">
-                    <img src="/SHSEnvironmentalAction/images/CustomLeaf.png">
+                <a target="_blank" href="/SHSEnvironmentalAction/images/nicole.png">
+                    <img src="/SHSEnvironmentalAction/images/nicole.png">
                 </a>
                 <p class="grade">Grade: 11</p>
                 <p class="name">President: Nicole Lee</p>
@@ -451,8 +451,8 @@
                 </p>
             </div>
             <div class="gallery">
-                <a target="_blank" href="/SHSEnvironmentalAction/images/CustomLeaf.png">
-                    <img src="/SHSEnvironmentalAction/images/CustomLeaf.png"> 
+                <a target="_blank" href="/SHSEnvironmentalAction/images/neha.png">
+                    <img src="/SHSEnvironmentalAction/images/neha.png"> 
                 </a>
                 <p class="grade">Grade: 11</p>
                 <p class="name">Vice President: Neha Tadikamalla</p>
@@ -461,8 +461,8 @@
                 </p>
             </div>
             <div class="gallery">
-                <a target="_blank" href="/SHSEnvironmentalAction/images/CustomLeaf.png">
-                    <img src="/SHSEnvironmentalAction/images/CustomLeaf.png"> 
+                <a target="_blank" href="/SHSEnvironmentalAction/images/Pear.PNG">
+                    <img src="/SHSEnvironmentalAction/images/Pear.PNG"> 
                 </a>
                 <p class="grade">Grade: 11</p>
                 <p class="name">Secretary: Aiden Chen</p>
@@ -471,8 +471,8 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fun Fact: Aiden writes like an old man.</p>
             </div>
             <div class="gallery">
-                <a target="_blank" href="/SHSEnvironmentalAction/images/233AE5F8-F8EF-40D5-B7CD-CB147DB1128A.jpeg">
-                    <img src="/SHSEnvironmentalAction/images/233AE5F8-F8EF-40D5-B7CD-CB147DB1128A.jpeg"> 
+                <a target="_blank" href="/SHSEnvironmentalAction/images/Richard.png">
+                    <img src="/SHSEnvironmentalAction/images/Richard.png"> 
                 </a>
                 <p class="grade">Grade: 11</p>
                 <p class="name">Webmaster: Richard Li</p>
@@ -482,8 +482,8 @@
                 </p>
             </div>
             <div class="gallery">
-                <a target="_blank" href="/SHSEnvironmentalAction/images/CustomLeaf.png">
-                    <img src="/SHSEnvironmentalAction/images/CustomLeaf.png"> 
+                <a target="_blank" href="/SHSEnvironmentalAction/images/Willis.png">
+                    <img src="/SHSEnvironmentalAction/images/Willis.png"> 
                 </a>
                 <p class="grade">Grade: 10</p>
                 <p class="name">Treasurer: Willis Chung</p>
