--- a/about-us/index.html
+++ b/about-us/index.html
@@ -195,6 +195,17 @@
                 position: relative;
                 top:15vw;
             }
+            .leaves{
+                position:relative;
+                width: 29vw;
+            }
+            .one{
+                top:4vw;
+            }
+            .two{
+                top:16vw;
+                transform: rotate(180deg); 
+            }
             #copyright {
                 position: absolute;
                 text-align:center;
@@ -438,6 +449,8 @@
         <img class = "CustomLeaf LeafTwo"/>
         <img class = "CustomLeaf LeafThree"/>
         <h1 id = "Header">MEET THE TEAM</h1>
+        <img class = "leaves one" src="/SHSEnvironmentalAction/images/Leaves.svg">
+        <img class = "leaves two" src="/SHSEnvironmentalAction/images/Leaves.svg">
         <div class = "container">
             <div class="gallery">
                 <a target="_blank" href="/SHSEnvironmentalAction/images/nicole.png">
