--- a/about-us/index.html
+++ b/about-us/index.html
@@ -189,7 +189,7 @@
             }
             #Header{
                 font-family: Montserrat;
-                font-size: 30rem;
+                font-size: 20rem;
                 font-weight: bold;
                 text-align: center;
                 position: relative;
@@ -326,13 +326,14 @@
                 font-family: Montserrat;
             }
             .gallery img {
-                width: 22vw;
-                height: 22vw;
+                width: 23.5vw;
+                height: 23.5vw;
                 border: 5px solid #000;
                 opacity:1;
+                object-fit: cover;
             }
             .gallery img:hover {
-                opacity:0.78;
+                opacity:0.72;
             }
             * {
                 box-sizing: border-box;
