--- a/about-us/index.html
+++ b/about-us/index.html
@@ -189,22 +189,25 @@
             }
             #Header{
                 font-family: Montserrat;
-                font-size: 20rem;
+                font-size: 7rem;
                 font-weight: bold;
                 text-align: center;
                 position: relative;
-                top:5vw;
+                top:1vw;
             }
             .leaves{
-                position:relative;
+                position:absolute;
                 width: 29vw;
             }
             .one{
                 top:1vw;
+                left:-2px;
             }
             .two{
-                top:6vw;
+                top:1.2vw;
                 transform: rotate(180deg); 
+                right:-2px;
+                left:auto;
             }
             #copyright {
                 position: absolute;
