--- a/about-us/index.html
+++ b/about-us/index.html
@@ -346,6 +346,20 @@
                 display: table;
                 clear: both;
             }
+            #Mentors{
+                font-family: Montserrat;
+                position:relative;
+                text-align:center;
+                color:white;
+                font-weight: bold;
+                font-size:2.4rem;
+            }
+            #MentorList{
+                font-family: Roboto;
+                position:relative;
+                text-align:center;
+                font-size:1.4rem;
+            }
             @media screen and (min-width: 921px) {
                 .LinksMenu, .icon {
                     display: none;
@@ -509,8 +523,9 @@
                 </p>
             </div>
         </div>
-        
         <div class="clearfix"></div>
+        <h2 id = "Mentors">OUR MENTORS!</h2>
+        <i id = "MentorList">Susan Hinton<br>Sue Chow<br>LeAnne McAuliffe<br>Cynthia Fan<br>Pamela Bond</i>
         <div class="Footer">
             <h3>About</h3>
             <p>
