--- a/about-us/index.html
+++ b/about-us/index.html
@@ -90,7 +90,6 @@
                 left: -8px;
                 overflow-x: hidden;
                 padding: 0;
-                margin-bottom:24vw;
             }    
             .logoBox{
                 width: 7.2vw;
@@ -197,14 +196,14 @@
             }
             .leaves{
                 position:absolute;
-                width: 29vw;
+                width: 25vw;
             }
             .one{
-                top:1vw;
+                top:17vw;
                 left:-2px;
             }
             .two{
-                top:1.2vw;
+                top:22vw;
                 transform: rotate(180deg); 
                 right:-2px;
                 left:auto;
@@ -288,7 +287,7 @@
             }
             .container{
                 width:80vw;
-                top:20vw;
+                margin-top:20vw;
             }
             .gallery {
                 position:relative;
@@ -347,6 +346,7 @@
                 clear: both;
             }
             #Mentors{
+                margin-top:5vw;
                 font-family: Montserrat;
                 position:relative;
                 text-align:center;
@@ -358,6 +358,7 @@
                 font-family: Roboto;
                 position:relative;
                 text-align:center;
+                font-style: italic;
                 font-size:1.4rem;
             }
             @media screen and (min-width: 921px) {
@@ -525,7 +526,7 @@
         </div>
         <div class="clearfix"></div>
         <h2 id = "Mentors">OUR MENTORS!</h2>
-        <i id = "MentorList">Susan Hinton<br>Sue Chow<br>LeAnne McAuliffe<br>Cynthia Fan<br>Pamela Bond</i>
+        <p id = "MentorList">Susan Hinton<br>Sue Chow<br>LeAnne McAuliffe<br>Cynthia Fan<br>Pamela Bond</p>
         <div class="Footer">
             <h3>About</h3>
             <p>
