--- a/about-us/index.html
+++ b/about-us/index.html
@@ -188,7 +188,7 @@
             }
             #Header{
                 font-family: Montserrat;
-                font-size: 7rem;
+                font-size: 5.4vw;
                 font-weight: bold;
                 text-align: center;
                 position: relative;
@@ -196,14 +196,14 @@
             }
             .leaves{
                 position:absolute;
-                width: 25vw;
+                width: 27vw;
             }
             .one{
-                top:17vw;
+                top:14.6vw;
                 left:-2px;
             }
             .two{
-                top:22vw;
+                top:20.1vw;
                 transform: rotate(180deg); 
                 right:-2px;
                 left:auto;
