--- a/about-us/index.html
+++ b/about-us/index.html
@@ -346,13 +346,13 @@
                 clear: both;
             }
             #Mentors{
-                margin-top:5vw;
+                margin-top:8vw;
                 font-family: Montserrat;
                 position:relative;
                 text-align:center;
                 color:white;
                 font-weight: bold;
-                font-size:2.4rem;
+                font-size:2.4vw;
             }
             #MentorList{
                 font-family: Roboto;
