--- a/about-us/index.html
+++ b/about-us/index.html
@@ -188,7 +188,7 @@
             }
             #Header{
                 font-family: Montserrat;
-                font-size: 5.4vw;
+                font-size: 5.12vw;
                 font-weight: bold;
                 text-align: center;
                 position: relative;
@@ -196,7 +196,7 @@
             }
             .leaves{
                 position:absolute;
-                width: 27vw;
+                width: 26.7vw;
             }
             .one{
                 top:14.6vw;
@@ -346,20 +346,21 @@
                 clear: both;
             }
             #Mentors{
-                margin-top:8vw;
+                margin-top:17.1vw;
                 font-family: Montserrat;
                 position:relative;
                 text-align:center;
                 color:white;
                 font-weight: bold;
-                font-size:2.4vw;
+                font-size:2.6vw;
             }
             #MentorList{
                 font-family: Roboto;
                 position:relative;
                 text-align:center;
                 font-style: italic;
-                font-size:1.4rem;
+                font-size:1.5vw;
+                line-height:1.24;
             }
             @media screen and (min-width: 921px) {
                 .LinksMenu, .icon {
@@ -400,6 +401,11 @@
                     width:150px;
                 }
             }       
+            @media screen and (max-width: 1100px) { 
+                .leaves{
+                    display: none;
+                }
+            }
             @media screen and (max-width: 920px) { 
                 .BannerButtons, .CustomLeaf {
                     display: none !important;
