--- a/about-us/index.html
+++ b/about-us/index.html
@@ -264,7 +264,7 @@
             .InstaLogo, .FaceLogo{
                 width:3.6vw;
                 height:auto;
-                top:237vw;
+                top:237.5vw;
             }
             .InstaLogo{
                 left:51.1vw;
@@ -359,8 +359,8 @@
                 position:relative;
                 text-align:center;
                 font-style: italic;
-                font-size:1.5vw;
-                line-height:1.24;
+                font-size:1.6vw;
+                line-height:1.37;
             }
             @media screen and (min-width: 921px) {
                 .LinksMenu, .icon {
@@ -369,20 +369,20 @@
             }
             @media screen and (max-width: 1070px) { 
                 .Footer, .Footer2{  
-                    top:2370px;
+                    top:2410px;
                     font-size:14px;
                 }
                 .LeftLine, .RightLine{
-                    top:2495px;
+                    top:2560px;
                     width:241px;
                 }
                 #copyright { 
                     font-size:14px;
-                    top:2560px;
+                    top:2600px;
                 }
                 .InstaLogo, .FaceLogo{
                     width:40px;
-                    top:2485px;
+                    top:2550px;
                 }
                 .FaceLogo{
                     left:auto;
@@ -392,13 +392,26 @@
                     left:50.8vw;
                 }
                 #FooterLogo{
-                    top: 2510px;
+                    top: 2592px;
                     left:25px;
                     width:80px;
                 }
                 #FooterHalftone{
-                    top:2436px;
+                    top:2476px;
                     width:150px;
+                }
+                #Mentors{
+                    position:absolute;
+                    top:2140px;
+                    font-size:2rem;
+                    left:50%;
+                }
+                #MentorList{
+                    position:absolute;
+                    font-size:1.3rem;
+                    left:50%;
+                    line-height:1.48;
+                    top:2160px;
                 }
             }       
             @media screen and (max-width: 1100px) { 
