--- a/about-us/index.html
+++ b/about-us/index.html
@@ -426,7 +426,7 @@
                     display: none;
                 }
                 .gallery{
-                    padding-top:60px;
+                    padding-top:30px;
                     
                 }
                 .gallery img{
@@ -436,10 +436,10 @@
                 .desc{
                     position:relative;
                     left:0;
-                    left:160px;
+                    margin:0;
+                    top:-1px;
                     text-align:left;
                     float:none;
-                    display:inline;
                     font-size:1rem;
                 }
                 .name{
@@ -447,12 +447,17 @@
                     top:51px;
                     margin:0;
                     left:10px;
+                    font-size:1.5rem;
                 }
                 .grade{
                     position: absolute;
-                    right:0;
-                    left:auto;
-                    top:34px;
+                    left:10px
+                    top:70px;
+                    font-size:1.4rem;
+                    border: 0px solid #000;
+                }
+                #filler{
+                    display:none;
                 }
             }
             @media screen and (max-width: 920px) { 
@@ -563,9 +568,9 @@
                 </a>
                 <p class="grade">Grade: 11</p>
                 <p class="name">Secretary: Aiden Chen</p>
-                <p class="desc">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <p class="desc"><span id = "filler">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fun Fact: Aiden writes like an old man.</p>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>Fun Fact: Aiden writes like an old man.</p>
             </div>
             <div class="gallery">
                 <a target="_blank" href="/SHSEnvironmentalAction/images/Richard.png">
