--- a/about-us/index.html
+++ b/about-us/index.html
@@ -420,13 +420,17 @@
                     line-height:1.48;
                     top:2180px;
                 }
+                .container{
+                    width:100vw;
+                    margin-top:30px;
+                }
             }       
             @media screen and (max-width: 1100px) { 
                 .leaves{
                     display: none;
                 }
                 .gallery{
-                    padding-top:30px;
+                    padding-top:10px;
                     
                 }
                 .gallery img{
@@ -470,10 +474,17 @@
                 .InstaLogo, .FaceLogo{
                     visibility: visible !important;
                 }
+                .desc{
+                    line-height:0.95;
+                    font-size:0.9rem;
+                }
             }
             @media screen and (max-width: 690px) { 
                 #FooterHalftone{
                     display: none;
+                }
+                .container{
+                    margin-top:18px;
                 }
             }
             @media screen and (max-width: 544px) {
