--- a/about-us/index.html
+++ b/about-us/index.html
@@ -422,7 +422,7 @@
                 }
                 .container{
                     width:100vw;
-                    margin-top:30px;
+                    margin-top:100px;
                 }
             }       
             @media screen and (max-width: 1100px) { 
@@ -448,16 +448,15 @@
                 }
                 .name{
                     position:absolute;
-                    top:51px;
                     margin:0;
                     left:165px;
-                    font-size:1.52rem;
+                    font-size:1.42rem;
                 }
                 .grade{
                     position: absolute;
-                    left:10px;
-                    top:75px;
-                    font-size:1.3rem;
+                    left:161px;
+                    top:70px;
+                    font-size:1.2rem;
                     border: 0px solid #000;
                 }
                 #filler{
@@ -485,6 +484,13 @@
                 }
                 .container{
                     margin-top:18px;
+                }
+                .name{
+                    font-size:1.22rem;
+                }
+                .grade{
+                    font-size:0.9rem;
+                    top:90px;
                 }
             }
             @media screen and (max-width: 544px) {
