--- a/about-us/index.html
+++ b/about-us/index.html
@@ -15,7 +15,7 @@
             }
             body {
                 overflow-x: hidden !important;
-                background-image: url("/SHSEnvironmentalAction/images/AboutUsBackground.svg");
+                background-image: url("/images/AboutUsBackground.svg");
                 background-position: center top;
                 height: 247vw;
                 min-height: 2639px;
@@ -165,7 +165,7 @@
                 right: 3vw;
             }
             .CustomLeaf{
-                content:url("/SHSEnvironmentalAction/images/CustomLeaf.png");
+                content:url("/images/CustomLeaf.png");
                 position: absolute;
                 width: 4.8%;
                 height: auto;
@@ -515,49 +515,49 @@
             }
         </style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-        <link rel="icon" type="image/png" href="https://li21rich.github.io/SHSEnvironmentalAction/roundbg.png?v=2" />
+        <link rel="icon" type="image/png" href="https://li21rich.github.io/roundbg.png?v=2" />
     </head>
     <body style="background-color:White;">
-        <img id = "TopBanner" src="/SHSEnvironmentalAction/images/TopBanner3.svg">
+        <img id = "TopBanner" src="/images/TopBanner3.svg">
         <div class="LinksMenu">
-            <!--<a href="https://li21rich.github.io/SHSEnvironmentalAction/articles/" style="padding-left: 12%;">Articles</a>-->
-            <!--<a href="https://li21rich.github.io/SHSEnvironmentalAction/campaigns/" style="padding-left: 12%;">Campaign</a>-->
-            <a href="https://li21rich.github.io/SHSEnvironmentalAction/about-us/" style="padding-left: 12%;">About Us</a>
+            <!--<a href="https://li21rich.github.io/articles/" style="padding-left: 12%;">Articles</a>-->
+            <!--<a href="https://li21rich.github.io/campaigns/" style="padding-left: 12%;">Campaign</a>-->
+            <a href="https://li21rich.github.io/about-us/" style="padding-left: 12%;">About Us</a>
         </div>
         <a href="#" class="icon">
             <i class="fa fa-bars"></i>
         </a>
-        <a href="https://li21rich.github.io/SHSEnvironmentalAction/">
+        <a href="https://li21rich.github.io/">
             <div class="logoBox">
-                <img src="/SHSEnvironmentalAction/images/birdgreen23.svg" alt="Environmental Action Club Logo">
+                <img src="/images/birdgreen23.svg" alt="Environmental Action Club Logo">
             </div>
             <div class="logoTextBox">
-                <img src="/SHSEnvironmentalAction/images/BrandText3.svg" alt="Environmental Action Club Logo">
+                <img src="/images/BrandText3.svg" alt="Environmental Action Club Logo">
             </div>
         </a>
-        <img id = "referencePoint" src="/SHSEnvironmentalAction/images/CustomLeaf.png">
+        <img id = "referencePoint" src="/images/CustomLeaf.png">
         <form>
-            <button class="BannerButtons ArticlesButton" formaction="https://li21rich.github.io/SHSEnvironmentalAction/articles/">Articles
+            <button class="BannerButtons ArticlesButton" formaction="https://li21rich.github.io/articles/">Articles
             </button>
         </form>
         <form>
-            <button class="BannerButtons CampaignsButton" formaction="https://li21rich.github.io/SHSEnvironmentalAction/campaigns/">Campaigns
+            <button class="BannerButtons CampaignsButton" formaction="https://li21rich.github.io/campaigns/">Campaigns
             </button>
         </form>
         <form>
-            <button class="BannerButtons AboutUsButton" formaction="https://li21rich.github.io/SHSEnvironmentalAction/about-us/">About Us
+            <button class="BannerButtons AboutUsButton" formaction="https://li21rich.github.io/about-us/">About Us
             </button>
         </form>
         <img class = "CustomLeaf LeafOne"/>
         <img class = "CustomLeaf LeafTwo"/>
         <img class = "CustomLeaf LeafThree"/>
         <h1 id = "Header">MEET THE TEAM</h1>
-        <img class = "leaves one" src="/SHSEnvironmentalAction/images/Leaves.svg">
-        <img class = "leaves two" src="/SHSEnvironmentalAction/images/Leaves.svg">
+        <img class = "leaves one" src="/images/Leaves.svg">
+        <img class = "leaves two" src="/images/Leaves.svg">
         <div class = "container">
             <div class="gallery">
-                <a target="_blank" href="/SHSEnvironmentalAction/images/nicole.png">
-                    <img src="/SHSEnvironmentalAction/images/nicole.png">
+                <a target="_blank" href="/images/nicole.png">
+                    <img src="/images/nicole.png">
                 </a>
                 <p class="grade">Grade: 11</p>
                 <p class="name">President: Nicole Lee</p>
@@ -567,8 +567,8 @@
                 </p>
             </div>
             <div class="gallery">
-                <a target="_blank" href="/SHSEnvironmentalAction/images/neha.png">
-                    <img src="/SHSEnvironmentalAction/images/neha.png"> 
+                <a target="_blank" href="/images/neha.png">
+                    <img src="/images/neha.png"> 
                 </a>
                 <p class="grade">Grade: 11</p>
                 <p class="name">Vice President: Neha Tadikamalla</p>
@@ -577,8 +577,8 @@
                 </p>
             </div>
             <div class="gallery">
-                <a target="_blank" href="/SHSEnvironmentalAction/images/Pear.PNG">
-                    <img src="/SHSEnvironmentalAction/images/Pear.PNG"> 
+                <a target="_blank" href="/images/Pear.PNG">
+                    <img src="/images/Pear.PNG"> 
                 </a>
                 <p class="grade">Grade: 11</p>
                 <p class="name">Secretary: Aiden Chen</p>
@@ -587,8 +587,8 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>Fun Fact: Aiden writes like an old man.</p>
             </div>
             <div class="gallery">
-                <a target="_blank" href="/SHSEnvironmentalAction/images/Richard.png">
-                    <img src="/SHSEnvironmentalAction/images/Richard.png"> 
+                <a target="_blank" href="/images/Richard.png">
+                    <img src="/images/Richard.png"> 
                 </a>
                 <p class="grade">Grade: 11</p>
                 <p class="name">Webmaster: Richard Li</p>
@@ -598,8 +598,8 @@
                 </p>
             </div>
             <div class="gallery">
-                <a target="_blank" href="/SHSEnvironmentalAction/images/Willis.png">
-                    <img src="/SHSEnvironmentalAction/images/Willis.png"> 
+                <a target="_blank" href="/images/Willis.png">
+                    <img src="/images/Willis.png"> 
                 </a>
                 <p class="grade">Grade: 10</p>
                 <p class="name">Treasurer: Willis Chung</p>
@@ -631,11 +631,11 @@
         </div>
         <hr class = "RightLine">
         <hr class = "LeftLine">
-         <a href="https://www.facebook.com/groups/334285765697491/" target="_blank"><img class = "LeftLine FaceLogo" src="/SHSEnvironmentalAction/images/FaceLogo.png"></a>
-         <a href="https://www.instagram.com/eac_shs/" target="_blank"><img class = "RightLine InstaLogo" src="/SHSEnvironmentalAction/images/InstaLogo.png"></a>
+         <a href="https://www.facebook.com/groups/334285765697491/" target="_blank"><img class = "LeftLine FaceLogo" src="/images/FaceLogo.png"></a>
+         <a href="https://www.instagram.com/eac_shs/" target="_blank"><img class = "RightLine InstaLogo" src="/images/InstaLogo.png"></a>
         <p id = "copyright">© 2023 Environmental Action Club All rights reserved.</p>
-        <a href="https://li21rich.github.io/SHSEnvironmentalAction/"><img id = "FooterLogo" src="/SHSEnvironmentalAction/images/FooterLogo.png"></a>
-        <img id = "FooterHalftone" src="/SHSEnvironmentalAction/images/FooterHalftone.png">
+        <a href="https://li21rich.github.io/"><img id = "FooterLogo" src="/images/FooterLogo.png"></a>
+        <img id = "FooterHalftone" src="/images/FooterHalftone.png">
         <script>
             <!--JQuery imported because convenient-->
             $(document).ready(function(){
