--- a/about-us/index.html
+++ b/about-us/index.html
@@ -515,19 +515,19 @@
             }
         </style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-        <link rel="icon" type="image/png" href="https://li21rich.github.io/roundbg.png?v=2" />
+        <link rel="icon" type="image/png" href="https://shseac.org/roundbg.png?v=2" />
     </head>
     <body style="background-color:White;">
         <img id = "TopBanner" src="/images/TopBanner3.svg">
         <div class="LinksMenu">
-            <!--<a href="https://li21rich.github.io/articles/" style="padding-left: 12%;">Articles</a>-->
-            <!--<a href="https://li21rich.github.io/campaigns/" style="padding-left: 12%;">Campaign</a>-->
-            <a href="https://li21rich.github.io/about-us/" style="padding-left: 12%;">About Us</a>
+            <!--<a href="https://shseac.org/articles/" style="padding-left: 12%;">Articles</a>-->
+            <!--<a href="https://shseac.org/campaigns/" style="padding-left: 12%;">Campaign</a>-->
+            <a href="https://shseac.org/about-us/" style="padding-left: 12%;">About Us</a>
         </div>
         <a href="#" class="icon">
             <i class="fa fa-bars"></i>
         </a>
-        <a href="https://li21rich.github.io/">
+        <a href="https://shseac.org/">
             <div class="logoBox">
                 <img src="/images/birdgreen23.svg" alt="Environmental Action Club Logo">
             </div>
@@ -537,15 +537,15 @@
         </a>
         <img id = "referencePoint" src="/images/CustomLeaf.png">
         <form>
-            <button class="BannerButtons ArticlesButton" formaction="https://li21rich.github.io/articles/">Articles
+            <button class="BannerButtons ArticlesButton" formaction="https://shseac.org/articles/">Articles
             </button>
         </form>
         <form>
-            <button class="BannerButtons CampaignsButton" formaction="https://li21rich.github.io/campaigns/">Campaigns
+            <button class="BannerButtons CampaignsButton" formaction="https://shseac.org/campaigns/">Campaigns
             </button>
         </form>
         <form>
-            <button class="BannerButtons AboutUsButton" formaction="https://li21rich.github.io/about-us/">About Us
+            <button class="BannerButtons AboutUsButton" formaction="https://shseac.org/about-us/">About Us
             </button>
         </form>
         <img class = "CustomLeaf LeafOne"/>
@@ -634,7 +634,7 @@
          <a href="https://www.facebook.com/groups/334285765697491/" target="_blank"><img class = "LeftLine FaceLogo" src="/images/FaceLogo.png"></a>
          <a href="https://www.instagram.com/eac_shs/" target="_blank"><img class = "RightLine InstaLogo" src="/images/InstaLogo.png"></a>
         <p id = "copyright">© 2023 Environmental Action Club All rights reserved.</p>
-        <a href="https://li21rich.github.io/"><img id = "FooterLogo" src="/images/FooterLogo.png"></a>
+        <a href="https://shseac.org/"><img id = "FooterLogo" src="/images/FooterLogo.png"></a>
         <img id = "FooterHalftone" src="/images/FooterHalftone.png">
         <script>
             <!--JQuery imported because convenient-->
