--- a/about-us/index.html
+++ b/about-us/index.html
@@ -614,7 +614,7 @@
         <div class="Footer">
             <h3>About</h3>
             <p>
-                <a>About us</a> 
+                <a href = "https://shseac.org/about-us/">About us</a> 
                 <p><br></p>
                 <a href= "https://linktr.ee/environmental_action_club" target="_blank">Sign up & other<br><br><br><br><br><br><br><br><br><br><br><br>Important Links</a>
             </p>
