--- a/404.html
+++ b/404.html
@@ -155,21 +155,21 @@
         }
       }
     </style>
-    <link rel="icon" type="image/png" href="https://li21rich.github.io/SHSEnvironmentalAction/roundbg.png?v=2">
+    <link rel="icon" type="image/png" href="https://li21rich.github.io/roundbg.png?v=2">
   </head>
   <body>
-    <img id = "TopBanner" src="/SHSEnvironmentalAction/images/TopBanner3.svg">
-    <a href="https://li21rich.github.io/SHSEnvironmentalAction/">
+    <img id = "TopBanner" src="/images/TopBanner3.svg">
+    <a href="https://li21rich.github.io/">
         <div class="logoBox">
-            <img src="/SHSEnvironmentalAction/images/birdgreen23.svg" alt="Environmental Action Club Logo">
+            <img src="/images/birdgreen23.svg" alt="Environmental Action Club Logo">
         </div>
         <div class="logoTextBox">
-            <img src="/SHSEnvironmentalAction/images/BrandText3.svg" alt="Environmental Action Club Logo">
+            <img src="/images/BrandText3.svg" alt="Environmental Action Club Logo">
         </div>
     </a>
     <h1><span style="font-weight: bold">Whoops!</span> 404 Error.</h1>
-    <p>The page you're migrating to doesn't exist at <span id="domain" style = "font-size: clamp(15px, 2vw, 8.7vw);"></span> <a href = "https://li21rich.github.io/SHSEnvironmentalAction/" style = "line-height:0.8;"><br><br>Return to home page.</a></p>
-    <img id = "bird" src="/SHSEnvironmentalAction/images/404vectorized2.svg">
+    <p>The page you're migrating to doesn't exist at <span id="domain" style = "font-size: clamp(15px, 2vw, 8.7vw);"></span> <a href = "https://li21rich.github.io/" style = "line-height:0.8;"><br><br>Return to home page.</a></p>
+    <img id = "bird" src="/images/404vectorized2.svg">
     <p id = "joke"><i>Our glass is still being bird fritted</i></p>
     <script>
         document.getElementById("domain").innerHTML = window.location.href.replace(/(^\w+:|^)\/\//, '');
