--- a/404.html
+++ b/404.html
@@ -159,7 +159,7 @@
   </head>
   <body>
     <img id = "TopBanner" src="/images/TopBanner3.svg">
-    <a href="https://li21rich.github.io/">
+    <a href="https://shseac.org/">
         <div class="logoBox">
             <img src="/images/birdgreen23.svg" alt="Environmental Action Club Logo">
         </div>
@@ -168,7 +168,7 @@
         </div>
     </a>
     <h1><span style="font-weight: bold">Whoops!</span> 404 Error.</h1>
-    <p>The page you're migrating to doesn't exist at <span id="domain" style = "font-size: clamp(15px, 2vw, 8.7vw);"></span> <a href = "https://li21rich.github.io/" style = "line-height:0.8;"><br><br>Return to home page.</a></p>
+    <p>The page you're migrating to doesn't exist at <span id="domain" style = "font-size: clamp(15px, 2vw, 8.7vw);"></span> <a href = "https://shseac.org/" style = "line-height:0.8;"><br><br>Return to home page.</a></p>
     <img id = "bird" src="/images/404vectorized2.svg">
     <p id = "joke"><i>Our glass is still being bird fritted</i></p>
     <script>
