--- a/about-us/index.html
+++ b/about-us/index.html
@@ -151,9 +151,6 @@
             }
             .ArticlesButton{
                 right: 28vw;
-
-                /* TEMPORARY */
-                visibility: hidden !important;
             }
             .CampaignsButton{
                 right: 15.5vw;
@@ -520,7 +517,7 @@
     <body style="background-color:White;">
         <img id = "TopBanner" src="/images/TopBanner3.svg">
         <div class="LinksMenu">
-            <!--<a href="https://shseac.org/articles/" style="padding-left: 12%;">Articles</a>-->
+            <a href="https://shseac.org/articles/" style="padding-left: 12%;">Articles</a>
             <!--<a href="https://shseac.org/campaigns/" style="padding-left: 12%;">Campaign</a>-->
             <a href="https://shseac.org/about-us/" style="padding-left: 12%;">About Us</a>
         </div>
