--- a/index.html
+++ b/index.html
@@ -151,9 +151,6 @@
             }
             .ArticlesButton{
                 right: 28vw;
-
-                /* TEMPORARY */
-                visibility: hidden !important;
             }
             .CampaignsButton{
                 right: 15.5vw;
@@ -741,7 +738,7 @@
         <img id = "TopBanner" src="images/TopBanner3.svg">
         <img id = "halftone" src="images/halftone2.png">
         <div class="LinksMenu">
-            <!--<a href="https://li21rich.github.io/SHSEnvironmentalAction/articles/" style="padding-left: 12%;">Articles</a>-->
+            <a href="https://li21rich.github.io/SHSEnvironmentalAction/articles/" style="padding-left: 12%;">Articles</a>
             <!--<a href="https://li21rich.github.io/SHSEnvironmentalAction/campaigns/" style="padding-left: 12%;">Campaign</a>-->
             <a href="https://li21rich.github.io/SHSEnvironmentalAction/about-us/" style="padding-left: 12%;">About Us</a>
         </div>
