--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
         </div>
         <div class="introduction">
             <h2 class = "introTitle">Introduction</h2>
-            <p>We are a passionate team of youth environmental activists, primarily from Saratoga High School. One of our focuses are environmentally impactful bills, such as SB499, AB1423, and SB676.</p>
+            <p>We are a PVSA-certified passionate organization of youth environmental activists, primarily from Saratoga High School. One of our focuses are environmentally impactful bills, such as SB499, AB1423, and SB676.</p>
         </div>
         <img id = "EnvironmentalPhoto" src = "images/Grassbird.jpg">
         <div class="Mission">
