--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -518,7 +518,41 @@
         <img class = "CustomLeaf LeafOne"/>
         <img class = "CustomLeaf LeafTwo"/>
         <img class = "CustomLeaf LeafThree"/>
-        <h1 id = "Header">Our Campaigns<br><i style = "font-size:2vw">For more articles, visit our <a href = "https://linktr.ee/environmental_action_club" target = "_blank">linktree</a></i></h1>
+        <h1 id = "Header">Campaigns & Accomplishments<br><i style = "font-size:2vw">Visit our <a href = "https://linktr.ee/environmental_action_club" target = "_blank">linktree</a> for more petition info</i></h1>
+        <h2>Current Accomplishments</h2>
+        <div class="row">
+          <div class="column">
+            <h3>Agendized a Moratorium</h3>
+              <ul>
+                  <li>Public comments on artificial turf at several Saratoga city council meetings</li>
+                  <li>Correspondence with city officials</li>
+                  <li>Contacted Santa Clara County Medical Association & asked them to write an official letter on artificial turf, which they sent to the school board & administration</li>
+                  <li>Emailed city council members on why plastic turf is harmful and what other cities have done against it</li>
+                  <li>Went to several city council meetings and gave public comments (2-3 min speeches)</li>
+                  <li>Consistently coordinated with council member Tina Walia</li>
+                  <li>Met with council member Belal Aftab</li>
+                  <li>Got an official Sierra Club letter sent to the school about artificial turf</li>
+                  <li>Sent our own letters to the Saratoga High School board and administration on artificial turf</li>
+                  <li>Made public comments at multiple Saratoga High School board meetings</li>
+                  <li>Posted article on Sierra Club’s weekly newsletter and website</li>
+              </ul>
+          </div>
+          <div class="column">
+            <h3>Passed an ordinance</h3>
+            <ul>
+                <li>Collaborated with other environmental action organizations</li>
+                <li>Public comments on reusable utensils at Half Moon Bay city council meeting</li>
+                <li>Consistently meeting Sierra Club constituents</li>
+                <li>Tabled at a Silicon Valley Youth Climate Action Team</li>
+                <li>Assisted the Bay Area Youth Climate Action Team host their plastics webinar (feat Dianne Wolke)</li>
+                <li>Met with Millbrae’s mayor for passing Millbrae’s artificial turf moratorium</li>
+                <li>Gave speeches on Fridays for Future Palo Alto</li>
+                <li>Visited and made public comments at a Foster City city council meeting</li>
+                <li>Helped get artificial turf agendized at Foster city</li>
+                <li>… and we are currently collaborating with the Green Committee to remove SHS’s artificial turf</li>
+            </ul>
+          </div>
+        </div>
         <img class = "leaves one" src="/images/Leaves.svg">
         <img class = "leaves two" src="/images/Leaves.svg">
         <img class = "spacer" src = /images/Leaves.svg">
